--- a/test3.ipynb
+++ b/test3.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import mpld3\n",
-    "mpld3.enable_notebook()\n",
+    "#import mpld3\n",
+    "#mpld3.enable_notebook()\n",
     "\n",
     "#%pylab inline\n",
     "#pylab.rcParams['figure.figsize'] = (12, 6)\n",
